feat: Implemented Splitter app and logic

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,1 @@
-<div class="d-flex justify-content-center align-items-center h-100">
-    <h1 class="text-primary"> Start your Challenge here</h1>
-</div>
+<router-outlet></router-outlet>
