--- a/src/assets/scss/base/_variables.scss
+++ b/src/assets/scss/base/_variables.scss
@@ -1,1 +1,15 @@
 // All the SCSS Variables goes here
+
+// font 
+$font-family                                : 'Roboto Mono', monospace;
+
+// form 
+$form-container-width                       : 1000px;
+$input-btn-focus-box-shadow                 : 0 0 0;
+$input-btn-focus-width                      : 50px;
+$input-border-width                         : 2px;
+$input-font-size                            : 1.2rem;
+$input-font-weight                          : 600;
+
+// button
+$btn-font-weight                            : 600;
